force-app/main/default/objects/Product2/fields/ManagedContentName__c.field-meta.xml
<CustomField>
    <fullName>ManagedContentName__c</fullName>
    <label>Resource Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>