force-app/main/default/objects/Product2/fields/Product_Catalog__c.field-meta.xml
<CustomField>
    <fullName>Product_Catalog__c</fullName>
    <label>Product Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Basic</fullName>
            </value>
            <value>
                <fullName>Premium</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>