force-app/main/default/objects/Product2/fields/Product_Link__c.field-meta.xml
<CustomField>
    <fullName>Product_Link__c</fullName>
    <formula>HYPERLINK(&quot;https://epicorgfarm-a4.my.site.com/outfitters&quot; &amp;  Id , &quot;View Product&quot;, &quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Link</label>
    <type>Text</type>
</CustomField>