force-app/main/default/objects/Product2/fields/Recall_flag__c.field-meta.xml
<CustomField>
    <fullName>Recall_flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recall flag</label>
    <type>Checkbox</type>
</CustomField>