force-app/main/default/objects/Product2/fields/RT_Description__c.field-meta.xml
<CustomField>
    <fullName>RT_Description__c</fullName>
    <label>RT Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>